--- a/src/tab/scss/mixin.scss
+++ b/src/tab/scss/mixin.scss
@@ -23,6 +23,7 @@
     }
 
     &.active {
+        z-index: 1;
         color: $tab-color-active;
         background-color: $tab-bg-color-active;
     }
